chore: Ignore docker specific files in .gitignore
This commit updates the .gitignore file to ignore docker specific files, including .dockerignore and .dockerenv. By ignoring these files, they will not be tracked by Git, ensuring that they are not accidentally committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,9 @@ sources/*.gz
 sources/*.bz2
 sources/*.lz
 
-# To ignore (possible) decompressed sources at sources/
+# Ignore (possible) decompressed sources at sources/
 sources/*/
+
+# Ignore docker specific files
+.dockerignore
+.dockerenv
